// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`>>> components/base/InputComponent.tsx --- Snapshot +++ should match snapshot 1`] = `
<input
  className="form-control"
  disabled={false}
  id="mock-id"
  onBlur={[Function]}
  onChange={[Function]}
  required={false}
  type="text"
=======
exports[`>>> components/base/InputComponent.tsx --- Snapshot >>> Capture snapshot of InputComponent 1`] = `
<input
  className="form-control"
  id="mock-id"
  onBlur={[Function]}
  onChange={[Function]}
>>>>>>> testing-toolbar
  value=""
/>
`;
